新增了一些wxs方法

--- a/lib/wxs/index.wxs
+++ b/lib/wxs/index.wxs
@@ -4,10 +4,10 @@
  * @Github: https://github.com/joanoor
  * @Date: 2020-07-08 11:18:51
  * 小程序的wxs文件，只支持ES5的语法
- */ 
+ */
 
 module.exports = {
-  
+
   /**
    * 描述
    * @author xixi
@@ -25,28 +25,60 @@ module.exports = {
   },
 
   /**
-   * 描述
+   * 四舍五入数字
    * @date 2020-07-08
-   * @param {any} value
-   * @returns {any}
+   * @param { Number } value
+   * @returns { Number }
    */
   roundNumber: function (value) {
     return Math.round(value)
   },
 
   /**
-   * 描述
+   * 将姓名长度大于2的转换成2位名字，否则不转换
    * @date 2020-07-08
-   * @param {any} name
-   * @returns {any}
+   * @param { String } name
+   * @returns { String }
    */
   roundName: function (name) {
-    var b=''
+    var b = ''
     if (name.length > 2) {
-      b = name.slice(1)
+      b = name.slice(-2)
     } else {
       b = name
     }
     return b
-  }
+  },
+
+  /**
+   * 转成整数
+   * @date 2020-07-09
+   * @param { Number,String } value
+   * @returns { Number }
+   */
+  intParse: function (value) {
+    return parseInt(value)
+  },
+
+  /**
+   * 转成浮点数
+   * @date 2020-07-09
+   * @param { Number,String } value
+   * @returns { Number }
+   */
+  floatParse: function (value) {
+    return parseFloat(value)
+  },
+
+  /**
+   * 固定两位小数
+   * @date 2020-07-09
+   * @param { Number } value
+   * @returns { Number }
+   */
+  fixedNum: function (value) {
+    return parseFloat(value).toFixed(2);
+  },
+
+
 }
